@@ -7,7 +7,6 @@ import gui.JDBuscadorReRe;
 import gui.JDReRe;
 import gui.generics.JDialogTable;
 import java.awt.event.*;
-import java.io.File;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Date;
@@ -27,11 +26,7 @@ import jpa.controller.CuentabancariaMovimientosJpaController;
 import jpa.controller.NotaCreditoJpaController;
 import jpa.controller.ReciboJpaController;
 import net.sf.jasperreports.engine.JRDataSource;
-import net.sf.jasperreports.engine.JRException;
-import net.sf.jasperreports.engine.JasperReport;
 import net.sf.jasperreports.engine.data.JRBeanCollectionDataSource;
-import net.sf.jasperreports.engine.type.SplitTypeEnum;
-import net.sf.jasperreports.engine.util.JRLoader;
 import org.apache.log4j.Logger;
 import utilities.general.NumberToLetterConverter;
 import utilities.general.UTIL;
